# GKDproject

./: README.md  test.cc
opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test  test.cpp
part1/: CMakeCache.txt  CMakeLists.txt  Makefile  Matrix.cc  Matrix.h  MatrixTest  cmake_install.cmake  main  main.cc  makefile
project/: CMakeCache.txt  CMakeLists.txt  Makefile  Matrix.h  cmake_install.cmake  main  main.cc  server  server.cc
