cmake_minimum_required (VERSION 2.8)
set(CMAKE_CXX_STANDARD 20)
project (GKDproject)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(main main.cc)
add_executable(server server.cc)
target_link_libraries(main ${OpenCV_LIBS})
target_link_libraries(server ${OpenCV_LIBS})